# master_thesis_firmware

./: .clang-format  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/apps/: CMakeLists.txt  app.h
src/apps/bsp/: CMakeLists.txt  app_main.cpp
src/config/: CMakeLists.txt
src/config/stm32f072_disco_v0_1/drivers/: CMakeLists.txt  driver_manager_config.cpp
src/config/stm32f072_disco_v0_1/drivers/gpio/: CMakeLists.txt  gpio_config.cpp  gpio_config.h
src/config/stm32f072_disco_v0_1/drivers/nvic/: CMakeLists.txt  nvic_config.cpp
src/config/stm32f072_disco_v0_1/drivers/rcc/: CMakeLists.txt  rcc_config.cpp
src/config/stm32f072_disco_v0_1/drivers/uart/: CMakeLists.txt  uart_config.cpp
src/config/stm32f072_disco_v0_1/libs/freertos/: FreeRTOSConfig.h
src/config/stm32f0_v0_1/drivers/: driver_manager_config.cpp
src/config/stm32f0_v0_1/libs/freertos/: CMakeLists.txt  FreeRTOSConfig.h
src/drivers/: CMakeLists.txt  driver.cpp  driver.h  drivers_manager.cpp  drivers_manager.h  irq_handler.h
src/drivers/stm32f0/gpio/: CMakeLists.txt  gpio.cpp  gpio.h
src/drivers/stm32f0/nvic/: CMakeLists.txt  nvic.cpp  nvic.h
src/drivers/stm32f0/rcc/: CMakeLists.txt  rcc.cpp  rcc.h
src/drivers/stm32f0/uart/: CMakeLists.txt  uart.cpp  uart.h
src/libs/: CMakeLists.txt
src/libs/circular_buffer/: CMakeLists.txt
src/libs/freertos/: CMakeLists.txt  freertos.cpp
src/libs/hal_stm32f0/: CMakeLists.txt  stm32f0xx_hal_conf.h
src/platform/: CMakeLists.txt  platform.h
src/platform/stm32f0/: CMakeLists.txt  platform.cpp  stm32f0xx_it.c
src/platform/stm32f0/linker/: STM32F072RBTx_FLASH.ld
targets/: CMakeLists.txt
targets/stm32f0_bsp/: CMakeLists.txt
toolchains/: CMakeLists.txt  arm-none-eabi-gcc.cmake
